<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg5"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/btnCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imgLogo"
            android:layout_marginTop="126dp"
            android:clickable="true"
            android:contentDescription="@string/credits"
            android:onClick="onClickCredits"
            android:src="@drawable/credits" />

        <ImageView
            android:id="@+id/btnHowto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnCredits"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="42dp"
            android:clickable="true"
            android:contentDescription="@string/howto"
            android:onClick="onClickHowto"
            android:src="@drawable/howtobutton" />

        <ImageView
            android:id="@+id/btnAchievements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnHowto"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:contentDescription="@string/story"
            android:onClick="onClickAchievements"
            android:src="@drawable/story" />
       
</RelativeLayout>