<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/bhname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:maxLength="8"
        android:text="@string/defaultname" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/namebh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bhname"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/namebh"
        android:src="@drawable/namebh" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="26dp"
        android:clickable="true"
        android:contentDescription="@string/play"
        android:onClick="onClickNext"
        android:src="@drawable/play" />

</RelativeLayout>
