<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    android:gravity="top"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <ImageView
        android:id="@+id/btnGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgLogo"
        android:clickable="true"
        android:contentDescription="@string/play"
        android:onClick="onClickGame"
        android:src="@drawable/play" />

    <ImageView
        android:id="@+id/btnHighScores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnGame"
        android:clickable="true"
        android:contentDescription="@string/highscore"
        android:onClick="onClickHighscores"
        android:src="@drawable/highscores" />

    <ImageView
        android:id="@+id/btnInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnHighScores"
        android:clickable="true"
        android:contentDescription="@string/info"
        android:onClick="onClickInfo"
        android:src="@drawable/info" />
    <!-- sign-in button -->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_below="@+id/btnInfo"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"/>

    <!-- sign-out button -->
    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Out"
        android:layout_below="@+id/btnInfo"
        android:layout_toLeftOf="@+id/sign_in_button"
        android:visibility="gone"/>
</RelativeLayout>